# EngineeringMetrics

./: .replit  README.md  app.db  app.py  main.py  models.py  pyproject.toml  routes.py
attached_assets/: README.md
services/: github_service.py  jira_service.py
static/css/: style.css
static/js/: dashboard.js  readme_generator.js
templates/: base.html  dashboard.html  login.html  readme_generator.html  signup.html
