[project]
name = "repl-nix-engineeringmetrics"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-wtf>=1.2.2",
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "jira>=3.8.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.36",
    "werkzeug>=3.1.3",
    "oauthlib>=3.2.2",
    "flask-migrate>=4.0.7",
    "python-dotenv>=1.0.1",
    "pygithub>=2.5.0",
]
